# Thermotion

./: LICENSE.md  README.md
3D model/application/: armrest_silicone.stl  geography_book.stl  sphere_wipe_latitudinal.stl
3D model/application/fever physiology model/: body.stl  forehead.stl  left_face.stl  right_face.stl
3D model/primitives/: hilbert_line.stl  path_mobius.stl  path_treble_clef.stl  spread_radial.stl  spread_radial_silicone.stl  test_device.stl  texture_irregular_voronoi.stl  texture_reqular_circle_silicone.stl  texture_reqular_square.stl  wipe_diagonal.stl  wipe_horizontal.stl  wipe_horizontal_rectangle.stl  wipe_horizontal_silicone.stl  wipe_latitudinal.stl  wipe_longitudinal.stl
src/code-publish/: CMakeLists.txt  run_all.sh
src/code-publish/include/: area.hpp  connectionmap.hpp  customized.hpp  heatmesh.hpp  kdtreemap.hpp  materials.hpp  structs.hpp  watermanager.hpp
src/code-publish/src/: main.cpp
src/plugin-publish/: README.md
src/plugin-publish/ThermotionDesignTool1/: ThermotionDesignTool.sln
src/plugin-publish/ThermotionDesignTool1/ThermotionDesignTool/: Thermotion.cs  ThermotionDesignTool.csproj  ThermotionDesignToolInfo.cs
src/plugin-publish/ThermotionDesignTool2/: ThermotionDesignTool2.sln
src/plugin-publish/ThermotionDesignTool2/ThermotionDesignTool2/: ThermotionDesignTool2.csproj  ThermotionDesignTool2Info.cs  ThermotionSimulationSetter.cs
src/plugin-publish/ThermotionDesignTool3/: ThermotionDesignTool3.sln
src/plugin-publish/ThermotionDesignTool4/: ThermotionDesignTool4.sln
(+6 files in other folders)
