CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(SIMULATOR CXX)

IF(NOT CMAKE_BUILD_TYPE)
    SET(CMAKE_BUILD_TYPE Release)
ENDIF()

ADD_SUBDIRECTORY(deps/vecmath)

SET(SIMULATOR_SOURCES
        src/main.cpp)

SET(SIMULATOR_INCLUDES
        include/connectionmap.hpp
        include/kdtreemap.hpp
        include/watermanager.hpp
        include/heatmesh.hpp
        include/area.hpp)

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)

ADD_EXECUTABLE(${PROJECT_NAME} ${SIMULATOR_SOURCES} ${SIMULATOR_INCLUDES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} vecmath)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} pthread)
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE include)
